# mountainash

./: .gitignore  ARCHITECTURE_MISMATCH_ANALYSIS.md  CLAUDE.md  CODEBASE_STRUCTURE_ANALYSIS.md  COMPLETE_FILE_LISTING.txt  CONTRIBUTING.md  DETAILED_FILE_MAP.md  EXPRESSIONSYSTEM_IMPLEMENTATION_COMPLETE.md  EXPRESSIONSYSTEM_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PARAMETER_RESOLUTION_ANALYSIS.md  README.md  REFACTORING_COMPLETE.md  RELEASE.md  SECURITY.md  TESTING.md  Untitled.ipynb  VISITOR_ARCHITECTURE_ANALYSIS.md  examples_public_api.py  hatch.toml  pyproject.toml  pyrightconfig.json  pytest.ini  sonar-project.properties  test_arithmetic.py  test_conditional.py  test_cross_backend.py  test_dbt_ibis_integration.py  test_expression_system.py  test_ibis_backend.py  test_pattern.py  test_public_api.py  test_string.py  test_temporal.py
.claude/: settings.json
.github/: renovate.json
.github/config/: mountainash_dependencies.yml
.github/workflows/: build-and-release-package.yml  changelog-generation.yml  main-release-build-dependencies.yml  python-run-pytest.yml  python-run-radon.yml  python-run-ruff.yml
.hiivmind/corpus/: registry-graph.yaml  registry.yaml
.hiivmind/package-profile/: manifest.json
_deprecated/mountainash_expressions/: __version__.py
docs/: BACKEND_INCONSISTENCIES.md  PROTOCOL_INFORMED_REGISTRY_PLAN.md  PROTOCOL_INFORMED_REGISTRY_PLAN_backup.md  TERNARY_LOGIC_ARCHITECTURE.md  THE_SILENT_TERNARY_PROBLEM - examples.md  THE_SILENT_TERNARY_PROBLEM.md  conversion matrix logic.md  dbt_semantic_layer_integration.py  known-divergences.md  mountainash-semantic-layer-package-structure.md  narwhals_migration.md  semantic-layer-ternary-logic-analysis.md  system_inventory_20251129.md  test_cast_vs_literal_translation.py  test_ibis_literal_dtype.py  test_ibis_polars_translation.py  test_polars_strict_cast_pow.py  testing_prompt.md  verify_polars_operator.py  visitor_factory copy.py
docs/BlogPosts/: WHY_USE_THIS_PACKAGE.md  blogpost ideas.md
docs/Bug Reports/: COMPREHENSIVE_IBIS_POLARS_ANALYSIS.md  EXECUTIVE_SUMMARY.md  INDEX.md  INVESTIGATION_COMPLETE.md  POLARS_CORRECTNESS_DEBATE.md  SIMPLE_ANSWER.md  TLDR_IBIS_IS_THE_CULPRIT.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  WHY_SQL_BACKENDS_WORK.md
docs/ExpressionSystemRefactoring/: corrected_orthogonal_analysis.md  expression_system_architecture.md  implementation_patterns.md  orthogonal_architecture_analysis.md  orthogonal_architecture_diagram.md  phase1_tasks.md  project_plan.md  refined_architecture.md
docs/Facade Refactor/: IMPLEMENTATION_PLAN.md  mountainash_expressions_namespace_refactor.md
docs/Future Expansion/: ARCHITECTURAL_REVIEW_COMPLETE.md  Alignment-Matrix.md  Architectural-Review-ExpressionSystem-Refactoring.md  Architecture-Documentation-Index.md  Backend-Verification-Checklist.md  Core-Node-Structure-Recommendation.md  ENUM_ALIGNMENT_ANALYSIS.md  ENUM_ALIGNMENT_QUICK_REF.md  ENUM_ALIGNMENT_SUMMARY.md  ExpressionNode-Architecture-Review.md  ExpressionSystem-Refactoring-Index.md  Ibis-Polars-Comparison.md  Interface-Test-Architecture.md  Protocol-Architecture-Proposal.md  README_ENUM_ANALYSIS.md  Refactoring-Roadmap.md  Unified-Protocol-Architecture.md  VISION.md  Visitor-Backend-Protocol-Alignment.md
docs/SubtraitAlignment/: BUILDERPROTOCOL_MIGRATION_PLAN.md  NAMESPACE_BUILDERPROTOCOL_IMPLEMENTATION.md  SUBSTRAIT_ALIGNMENT_PLAN.md  SUBSTRAIT_FUNCTION_TYPE_ALIGNMENT.md  VisitorRegistrationUpgrade.md  more_alignment_20251226.md  substrait_alignment_plan_20251129.md
docs/adr/: ADR-001-singular-or-list-node.md  ADR-002-substrait-builder-protocols.md  ADR-003-namespace-builderprotocol-implementation.md  ADR-004-function-mapping-registry-alignment.md  ADR-005-backend-expression-system-rebuild.md  ADR-006-public-expression-api-rebuild.md  ADR-007-mountainash-extension-system.md  ADR-008-substrait-extension-alignment.md  ADR-009-substrait-backend-implementation-alignment.md  ADR-010-api-builder-protocol-alignment.md
docs/architecture/: SUBSTRAIT_MIGRATION.md  mountainash-expressions-architecture.excalidraw
docs/talks/: AST_FIRST_DESIGN_TALK.md  CROSS_BACKEND_TESTING_TALK.md  NULL_PHILOSOPHY_TALK.md  TERNARY_LOGIC_TALK.md
examples/: cross_logic_delegation.py  simplified_visitor_template.py  ultra_simple_visitor_pattern.py
notes/: aggregate-wiring-audit-2026-04-08.md  typespec-frictionless-gaps-backlog.md  typespec-frictionless-gaps.md
scripts/: audit_upstream_issues.py  compare_substrait_coverage.py  fix-ci-workflows.sh  generate_divergences_catalog.py  generate_from_substrait.py  migrate_dataframes.py  migrate_pydata.py  migrate_schema.py  migrate_to_unified_package.py  port_dataframes_tests.py  report_drift_guards.py  validate_upstream_registry.py
scripts/.substrait_cache/: functions_set.yaml
scripts/outputs/: SUBSTRAIT_FUNCTIONS.md  definitions_generated.py  drift-guards-report.md  enums.py  protocols_generated.py
src/mountainash/: __init__.py  __version__.py
src/mountainash_expressions/: __init__.py  __init__.py.bak  constants.py  types.py
tests/: conftest.py  test_circular_references.py  test_plugin_architecture.py
tests/alignment/: test_roundtrip.py  test_schema_builder.py  test_sink.py  test_source.py
tests/backends/: __init__.py
tests/conform/: test_conform_builder.py  test_conform_expressions.py  test_conform_extensions.py  test_conform_transforms.py  test_relation_conform.py  test_visitor_conform.py
tests/core/: test_io.py  test_unified_constants.py  test_unified_types.py
tests/cross_backend/: __init__.py  test_aggregate_results.py  test_arithmetic.py  test_arithmetic_essentials.py  test_bitwise.py  test_boolean.py  test_case_insensitive_string.py  test_cast.py  test_comparison_missing_close.py  test_compose_cast.py  test_compose_comparison_extended.py  test_compose_conditional.py  test_compose_cross_namespace.py  test_compose_datetime.py  test_compose_datetime_extended.py  test_compose_entrypoints.py  test_compose_name.py  test_compose_null.py  test_compose_set.py  test_compose_string.py  test_compose_string_extended.py  test_least.py  (+42 more)
(+1666 files in other folders)
