[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mountainash"
dynamic = ["version"]
description = "Unified cross-backend DataFrame expressions, relations, and schema management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nathaniel Ramm", email = "nathaniel.ramm@discretedatascience.com" },
]
keywords = ["dataframe", "expressions", "polars", "pandas", "ibis", "cross-backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.35.1",
    "narwhals>=1.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.2.0"]
ibis = ["ibis-framework>=9.0.0"]
pyarrow = ["pyarrow>=15.0.0"]
pydantic = ["pydantic>=2.0.0"]
all = ["mountainash[pandas,ibis,pyarrow,pydantic]"]


[project.urls]
Homepage = "https://github.com/mountainash-io/mountainash"
Documentation = "https://github.com/mountainash-io/mountainash#readme"
Issues = "https://github.com/mountainash-io/mountainash/issues"
Source = "https://github.com/mountainash-io/mountainash"

#================
# Tool: Coverage
#================
[tool.coverage.run]
source_pkgs = ["mountainash", "tests"]
branch = true
parallel = true
omit = ["src/mountainash/__version__.py", "src/mountainash/expressions/__version__.py"]

[tool.coverage.paths]
mountainash_data = [
    "src/mountainash",
    "*/mountainash-expressions/src/mountainash",
]
tests = ["tests", "*/mountainash-expressions/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__:", "if TYPE_CHECKING:"]


