[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mountainash"
dynamic = ["version"]
description = "Unified cross-backend DataFrame expressions, relations, and schema management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Nathaniel Ramm", email = "nathaniel.ramm@discretedatascience.com" },
]
keywords = ["dataframe", "expressions", "polars", "pandas", "ibis", "cross-backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.35.1",
    "narwhals>=2.19.0",
    "pydantic>=2.0.0",
    "typing_extensions>=4.0.0",
    "lazy_loader>=0.3",
    "universal-pathlib>=0.2.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.2.0"]
ibis = ["ibis-framework>=9.0.0"]
pyarrow = ["pyarrow>=15.0.0"]
datacontracts = ["pandera[polars]>=0.22.0"]
all = ["mountainash[pandas,ibis,pyarrow,datacontracts]"]


[project.urls]
Homepage = "https://github.com/mountainash-io/mountainash"
Documentation = "https://github.com/mountainash-io/mountainash#readme"
Issues = "https://github.com/mountainash-io/mountainash/issues"
Source = "https://github.com/mountainash-io/mountainash"

#================
# Tool: Coverage
#================
[tool.coverage.run]
source_pkgs = ["mountainash", "tests"]
branch = true
parallel = true
omit = ["src/mountainash/__version__.py", "src/mountainash/__version__.py"]

[tool.coverage.paths]
mountainash_data = [
    "src/mountainash",
    "*/mountainash/src/mountainash",
]
tests = ["tests", "*/mountainash/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__:", "if TYPE_CHECKING:"]


# ============================================================================
# Ruff Configuration
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "FA",     # flake8-future-annotations
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long — enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export symbols intentionally
"__init__.py" = ["F401"]
# Expression backend files legitimately import their backend eagerly
"src/mountainash/expressions/backends/**" = ["TCH001", "TCH002"]
# Relation backend files legitimately import their backend eagerly
"src/mountainash/relations/backends/**" = ["TCH001", "TCH002"]
# Pydantic node files need enum/type imports at runtime for field definitions
"src/mountainash/expressions/core/expression_nodes/**" = ["TCH001", "TCH002", "TCH003"]
"src/mountainash/relations/core/relation_nodes/**" = ["TCH001", "TCH002", "TCH003"]
# Relation protocol files use types in Protocol definitions (Pydantic-based)
"src/mountainash/relations/core/relation_protocols/**" = ["TCH001", "TCH002"]
